[package]
name = "ssb-neon-keys"
version = "8.0.0"
authors = ["Andre Staltz <andre@staltz.com>"]
license = "AGPL-3.0"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]
edition = "2018"

[lib]
name = "ssb_neon_keys"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.2"

[dependencies]
neon = "0.4.2"
ssb-keyfile = "0.4.0"
ssb-crypto = "0.2.1"
private-box = "0.6.0"
base64 = "0.11.0"
arrayvec = "0.5.1"
